Fix padding on mobile tips (for realsies)

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -552,7 +552,7 @@ a:hover {
         padding: 0;
     }
 
-    .tips li {
+    .tips ul li {
         padding: 10px;
         margin: 0;
     }
